Fixed spacing issues for smaller ratio phone screens

--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -54,6 +54,10 @@ dialog:-internal-dialog-in-top-layer::backdrop {
     background: rgba(0, 0, 0, 0.5);
 }
 
+::ng-deep .mat-button-toggle-appearance-standard .mat-button-toggle-label-content {
+    padding: 0 8px !important;
+}
+
 .sort {
     width: 100%;
     height: 42px;
